--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -217,6 +217,11 @@
                 position: relative;
                 overflow: hidden;
                 display: block;
+                
+                @supports (backdrop-filter: blur(20px)) {
+                    background: change-color( lighten($very-light, 2%), $alpha: 0.83);
+                    backdrop-filter: blur(20px);
+                }
 
                 li {
                     display: block;
@@ -236,11 +241,6 @@
             &-show {
                 .navbar-head {
                     background: $surface;
-
-                    @supports (backdrop-filter: blur(20px)) {
-                        background: change-color($surface, $alpha: 0.83);
-                        backdrop-filter: blur(20px);
-                    }
                 }
 
                 .navbar-head,
