--- a/views/app.pug
+++ b/views/app.pug
@@ -220,6 +220,6 @@ html(lang="en" itemscope='' itemtype='https://schema.org/WebPage')
               h1.style-white.style-bold.layer-title.style-uppercase.layout-margin-dull-vert-top Coming SOON
               h5.style-white.style-line-height.style-capital.layer-content-detail This website is currently in development. We are working day and night to have it in tip top shape.
 
-    script(src=`${debug ? './js/app.modern.min.js' : './js/app.vendor.min.js'}` inline async)
+    script(src=`${dev ? './js/app.modern.min.js' : './js/app.vendor.min.js'}` inline async)
     //- if !debug
       script(src=`./js/store.min.js` inline async)
