--- a/views/components/layer.pug
+++ b/views/components/layer.pug
@@ -1,7 +1,5 @@
 mixin layer(value)
-  - let _value = value || { class: "" };
-  - let _class = _value.class;
+  - let _class = value.class || "";
 
   section.layer(class=_class)
     block
-
