--- a/views/components/tile.pug
+++ b/views/components/tile.pug
@@ -8,9 +8,9 @@ mixin tile(value)
     if image
       +image(image)
 
-    section.layer-tile-footer
+    .layer-tile-footer
       if title
-        section.layer-tile-title= title
+        .layer-tile-title= title
 
       if content
         span.layer-tile-content.style-font-12= content
