--- a/views/layout.pug
+++ b/views/layout.pug
@@ -38,7 +38,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
     meta(property="og:image" content="https://www.josephojo.com/android-icon-192x192.png")
     meta(name="twitter:image" content="https://www.josephojo.com/android-icon-192x192.png")
 
-    block head
+    block seo
       +seo(page)
 
     link(rel="preconnect" href=`https://res.cloudinary.com/${cloud_name}/` crossorigin)
@@ -97,7 +97,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 
     .layer-action-center.layer-action-center-show
       article.layer-action-group
-        section.layer-primary-dark.layer-shadow.layer-round.layout-align-self-end.layout-margin-horz
+        .layer-primary-dark.layer-shadow.layer-round.layout-align-self-end.layout-margin-horz
           button.back-to-top.btn.btn-hover.layer-round.layout-padding-horz-smallest.layout-padding-vert-smallest.layer-primary-dark.layer-primary-hover.layer-primary-focus.style-tertiary.style-hover-tertiary.style-focus-tertiary(type="button")
             span.btn-group
               i.icon.style-font-sz-24(inline) expand_less
@@ -108,7 +108,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 
     +footer("Made with ❤ by Okiki Ojo | ")
       span.btn.pointer-default
-        section.btn-group
+        .btn-group
           i.icon(inline) copyright
           span.btn-section
             span.btn-spacer
