--- a/views/components/text.pug
+++ b/views/components/text.pug
@@ -1,11 +1,11 @@
-mixin span(value)
+mixin p(value)
   if typeof value == "string"
-    span.style-line-height-double.layout-padding-vert-small !{value}
+    p.style-line-height-double.layout-padding-vert-small !{value}
       block
 
   else
     - let { content, type } = value;
     - let _class = value.class;
 
-    span(class=_class) !{content}
+    p(class=_class) !{content}
       block
