--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -1,13 +1,17 @@
 include ./components/sections.pug
 include ./components/layout.pug
+include ./components/column.pug
 include ./components/layer.pug
+include ./components/text.pug
+include ./components/tile.pug
 include ./components/hero.pug
+include ./components/row.pug
 extends layout.pug
 
 block content
   //- Hero layer
   +hero({
-    title: "Brilliant <br/> Engineering", 
+    title: "Brilliant <br/> Engineering",
     content: "Creating with passion, crafting with love.",
     image: {
       class: "effect-parallax hero-img"
@@ -24,245 +28,184 @@ block content
       class: "layout-shorten layout-contain"
     })
       +head("Lorem itpsuim")
-      +main()
-        span(class="layout-padding-top layout-margin-left-large layout-inline-block")= " "
+      +main({
+          class: "style-line-height-double"
+      })
+        p.layout-padding-top.layout-margin-left-large.layout-inline-block= " "
         p(lorem="2")
         +link({
           href: "/",
           content: "Click here"
         })
-    
-  layer([
-      _class([ padding("horz", "vert-top-default--device-phone") ]),
-      layout([
-          _class([_layout("shorten", "contain")]),
-          values([
-              _header(title("Lorem itpsuim")),
-              _main([
-                  // _class([ font("14--device-phone") ]),
-                  values([
-                      indent,
-                      `Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
-                          took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                          It was popularised in the 1960s with the release of Letraset sheets
-                          containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum, `,
-                      _link("run", "/about")
-                  ])
-              ])
-          ])
-      ])
-  ]),
-  // End Intro layer
 
-  // Listings layer
-  layer([
-      layout([
-          _class([ padding("horz", "large-top") ]),
-          section([
-              _class([ _layout("shorten", "contain") ]),
-              values([
-                  _header(title("Listings")),
-                  _main([
-                      _class([ padding("top"), _style("line-height-double") ]),
-                      values([
-                          row([
-                              values([
-                                  col([
-                                      _class([ _col("2"), padding("bottom-small") ]),
-                                      values([
-                                          _content(`03/03`, [_style("bold"), font("18--device-phone","24") ])
-                                      ])
-                                  ]),
+  //- Listings layer
+  +layer
+    +layout({
+      class: "layout-padding-horz layout-padding-large-top"
+    })
+			section.layout-shorten.layout-contain
+				+head("Listings")
+				+main({
+						class: "layout-padding-top style-line-height-double"
+				})
+					+row
+						//- 1st Column
+						+column({
+							class: "layout-col-2 layout-padding-bottom-small"
+						})
+							+p({
+								content: "03/03",
+								class: "style-bold style-font-18--device-phone style-font-24"
+							})
 
-                                  col([
-                                      _class([_col("3"), padding("bottom"), _style("line-height-small--device-phone", "line-height-double") ]),
-                                      values([
-                                          _content(`2018`, [
-                                              _style("bold"),
-                                              _layout("block"), font("18--device-phone", "24")
-                                          ]),
-                                          _content(`E-commerse`, [
-                                              // _style("line-height-double"),
-                                              _layout("block"),
-                                              font("16--device-phone", "18")
-                                          ]),
-                                          _content(`Design Executive`, [
-                                              // _style("line-height-double"),
-                                              _layout("block"),
-                                              font("16--device-phone", "18")
-                                          ])
-                                      ])
-                                  ]),
+						//- 2nd Column
+						+column({
+							class: "layout-col-3 layout-padding-bottom style-line-height-small--device-phone style-line-height-double"
+						})
+							+p({
+								content: "2018",
+								class: "style-bold layout-block style-font-18--device-phone style-font-24"
+							})
+							+p({
+								content: "E-commerse",
+								class: "style-bold layout-block style-font-18--device-phone style-font-24"
+							})
+							+p({
+								content: "Design Executive",
+								class: "style-bold layout-block style-font-18--device-phone style-font-24"
+							})
 
-                                  col([
-                                      _class([ _col("7"), ]), // _style("justify")
-                                      values([
-                                          _content(`Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                                          unknown printer took a galley of type and scrambled it to make a type specimen book.`,
-                                          [ _style("line-height-double"), font("18") ])
-                                      ])
-                                  ])
-                              ])
-                          ])
-                      ])
-                  ])
-              ])
-          ])
-      ])
-  ]),
-  // End Listings layer
+						//- 3rd Column
+						+column({
+							class: "layout-col-7"
+						})
+							p.style-font-15--device-phone.style-font-18(lorem="1")
 
-  // Banner layer 1
-  layer([
-      _class([background("dark")]),
-      layout([
-          _class([_layout("contain-large", "enlarge-vert")]),
-          values([
-              _header([
-                  title(""),
-                  _class([_layout("vert"), _style("bold-font", "600"), "h2", color("white")]),
-                  values([
-                      `Got your attention.`, ` `,
-                      _content(`Good!`, [color("tertiary-dark")])
-                  ])
-              ])
-          ])
-      ])
-  ]),
-  // End Banner layer 1
+	//- Banner layer 1
+  +layer({
+		class: "layer-color-dark"
+	})
+    +layout({
+			class: "layout-contain-large layout-enlarge-vert"
+		})
+			+head({
+					class: "layout-padding-vert style-bold-font style-600 h2 style-color-white"
+			})
+				p Got your attention.
+				p= " "
+				+p({
+					class: "style-color-tertiary-dark",
+					content: "Good!"
+				})
 
-  // Banner layer 2
-  layer([
-      _class([ background("primary") ]),
-      layout([
-          _class([ _layout("contain-large", "enlarge-vert") ]),
-          values([
-              _header([
-                  title(""),
-                  _class([ _layout("vert"), _style("bold-font", "600"), "h2", color("white") ]),
-                  values([
-                      `Got your attention.`, ` `,
-                      _content(`Good!`, [ color("tertiary-dark") ])
-                  ])
-              ])
-          ])
-      ])
-  ]),
-  // End Banner layer 2
+	//- Banner layer 2
+  +layer({
+		class: "layer-color-primary"
+	})
+    +layout({
+			class: "layout-contain-large layout-enlarge-vert"
+		})
+			+head({
+					class: "layout-padding-vert style-bold-font style-600 h2 style-color-white"
+			})
+				p Got your attention.
+				p= " "
+				+p({
+					class: "style-color-tertiary-dark",
+					content: "Good!"
+				})
 
-  // Banner layer 3
-  layer([
-      _class([ background("tertiary") ]),
-      layout([
-          _class([ _layout("contain-large", "enlarge-vert") ]),
-          values([
-              _header([
-                  title(""),
-                  _class([ _layout("vert"), _style("bold-font", "600"), "h2", color("dark") ]),
-                  values([
-                      `Got your attention.`, ` `,
-                      _content(`Good!`, [ color("secondary-dark") ])
-                  ])
-              ])
-          ])
-      ])
-  ]),
-  // End Banner layer 3
+	//- Banner layer 3
+  +layer({
+		class: "layer-color-tertiary"
+	})
+    +layout({
+			class: "layout-contain-large layout-enlarge-vert"
+		})
+			+head({
+					class: "layout-padding-vert style-bold-font style-600 h2 style-color-dark"
+			})
+				p Got your attention.
+				p= " "
+				+p({
+					class: "style-color-secondary-dark",
+					content: "Good!"
+				})
 
-  // Breakthrough layer
-  layer([
-      layout([
-          _class([
-              _layout("contain-large"),
-              padding("horz", "large")
-          ]),
-          values([
-              _main([
-                  _class([ _layout("vert") ]),
-                  values([
-                      row([
-                          values([
-                              col([
-                                  _class([ _col("6"), padding("bottom-small", "right-large") ]),
-                                  values([
-                                      _content(`Breakthrough<br>Limits!`, [
-                                          _style("bold", "line-height", "600"),
-                                          "h3", color("primary")
-                                      ])
-                                  ])
-                              ]),
+  //- Breakthrough layer
+  +layer
+    +layout({
+			class: "layout-contain-large layout-padding-large"
+		})
+			+main({
+					class: "layout-padding-vert"
+			})
+				+row
+					//- 1st Column
+					+column({
+						class: "layout-col-6 layout-padding-bottom-small layout-padding-right-large"
+					})
+						+p({
+							content: "Breakthrough<br>Limits!",
+							class: "style-color-primary style-bold style-600 style-font-18--device-phone style-font-24 h3"
+						})
 
-                              col([
-                                  _class( _col("6") ),
-                                  values([
-                                      _content(`Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                                          unknown printer took a galley of type and scrambled it to make a type specimen book.`,
-                                          [ _layout("block"), _style("line-height-double"), font("18") ])
-                                  ])
-                              ])
-                          ])
-                      ])
-                  ])
-              ])
-          ])
-      ])
-  ]),
-  // End Breakthrough layer
+					//- 2nd Column
+					+column({
+						class: "layout-col-6"
+					})
+						p.style-font-15--device-phone.style-font-18.layout-block(lorem="1")
 
-  // Image Column layer
-  layer([
-      layout([
-          _class([ _layout("contain-large") ]),
-          values([
-              _main([
-                  _class([ _layout("shorten-vert") ]),
-                  values([
-                      row([
-                          _class([ margin("dull") ]),
-                          values([
-                              spacingColumns(3),
+  //- Image Column layer
+  +layer
+    +layout({
+			class: "layout-contain-large"
+		})
+			+main({
+					class: "layout-shorten-vert"
+			})
+				//- 1st Row
+				+row({
+					class: "layout-margin-dull"
+				})
+					//- Empty alignment Column
+					+column({
+						class: "layout-col-3 layout-block"
+					})
 
-                              col([
-                                  _class([ _col("9"), padding("small") ]),
-                                  values([
-                                      _tile([
-                                          "Google Designs", "",
-                                          _img(cityImg, "City Alt", [_class("effect-parallax") ]),
-                                          _class([
-                                              _layer("box", "surface"), // , "shadow--1"
-                                              _layout("block")
-                                          ])
-                                      ])
-                                  ])
-                              ])
-                          ])
-                      ]),
+					//- 1st Column
+					+column({
+						class: "layout-col-9 layout-padding-small"
+					})
+						+tile({
+							title: "Google Designs",
+							class: "layer-box layer-surface layout-block", // , "layer-shadow--1"
+							image: {
+								class: "effect-parallax",
+								src: "/assets/city",
+								alt: "City Alt",
+							}
+						})
 
-                      row([
-                          _class([ margin("dull") ]),
-                          values([
-                              col([
-                                  _class([ _col("9"), padding("small", "vert-large") ]),
-                                  values([
-                                      _tile([
-                                          "Google Designs", "",
-                                          _img(blueSkyImg, "Blue sky Alt", [ _class("") ]),
-                                          _class([
-                                              _layer("box", "surface"), // , "shadow--1"
-                                              _layout("block")
-                                          ])
-                                      ])
-                                  ])
-                              ]),
+				//- 2nd Row
+				+row({
+					class: "layout-margin-dull"
+				})
+					//- 1st Column
+					+column({
+						class: "layout-col-9 layout-padding-small layout-padding-vert-large"
+					})
+						+tile({
+							title: "Google Designs",
+							class: "layer-box layer-surface layout-block", // , "layer-shadow--1"
+							image: {
+								//- class: "effect-parallax",
+								src: "/assets/blue-sky",
+								alt: "Blue sky Alt",
+							}
+						})
 
-                              spacingColumns(3),
-                          ])
-                      ])
-                  ])
-              ])
-          ])
-      ])
-  ]),
-  // End Image Column layer
+					//- Empty alignment Column
+					+column({
+						class: "layout-col-3"
+					})
