--- a/views/components/banner.pug
+++ b/views/components/banner.pug
@@ -1,6 +1,6 @@
 include ./image.pug
 
-mixin banner(value)
+mixin banner(value = {})
   - let { content, title, img } = value;
 
   .layer.layer-hero-id
