--- a/views/components/footer.pug
+++ b/views/components/footer.pug
@@ -1,4 +1,4 @@
-mixin footer(value)
+mixin footer(value = "Copyright")
   footer
     .layout-contain
       .layout-padding.style-center.style-font-weight-bold.style-font-title.style-spaceout-small= value
