--- a/views/components/image.pug
+++ b/views/components/image.pug
@@ -1,4 +1,4 @@
-mixin image(value)
+mixin image(value = {})
   - let _class = value.class;
   - let src = value.src || "/assets/city";
   - let alt = value.alt || "Alternate text";
