--- a/views/components/text.pug
+++ b/views/components/text.pug
@@ -1,4 +1,4 @@
-mixin p(value)
+mixin p(value = {})
   if typeof value == "string"
     p.style-line-height-double.layout-padding-vert-small !{value}
       block
