--- a/views/components/seo.pug
+++ b/views/components/seo.pug
@@ -1,6 +1,6 @@
-mixin layout(value)
+mixin seo(value = {})
   - let { title, url, description } = value;
-  
+
   title= title
   meta(name='title' content=title)
   meta(itemprop='name' content=title)
