--- a/views/components/seo.pug
+++ b/views/components/seo.pug
@@ -8,9 +8,9 @@ mixin seo(value = {})
   meta(name='twitter:title' content=title)
   meta(name="apple-mobile-web-app-title", content=title)
 
-  meta(itemprop='url' content=`https://www.josephojo.com/${url}`)
-  meta(property='og:url' content=`https://www.josephojo.com/${url}`)
-  meta(name='twitter:url' content=`https://www.josephojo.com/${url}`)
+  meta(itemprop='url' content=`https://www.josephojo.com${url}`)
+  meta(property='og:url' content=`https://www.josephojo.com${url}`)
+  meta(name='twitter:url' content=`https://www.josephojo.com${url}`)
 
   meta(name='description' content=description)
   meta(name='description' content=description)
