--- a/views/app.pug
+++ b/views/app.pug
@@ -1,225 +1,123 @@
 doctype html
-html(lang="en" itemscope='' itemtype='https://schema.org/WebPage')
+html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
   head
-    meta(charset='utf-8')
-    meta(http-equiv='Accept-CH' content='DPR, Viewport-Width, Width')
+    include ./components/navbar.pug
+    include ./components/footer.pug
+    include ./components/link.pug
+    include ./components/seo.pug
+
+    block pageInfo
+      -
+        let page = {
+          url: "/",
+          name: "index",
+          title: "Joseph Ojo.",
+          description: "The porfolio of Joseph, it contains all amazing projects etc..."
+        };
+
+    meta(charset="utf-8")
+    meta(http-equiv="Accept-CH" content="DPR, Viewport-Width, Width")
     meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
-    //- meta(http-equiv='Cache-Control' content='public, max-age=31536000')
+
     if dev
-      meta(http-equiv='Content-Security-Policy' content=`
-      default-src 'self'; font-src 'self' data:; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/${cloud_name}/ https://www.josephojo.com; script-src 'self' https://polyfill.io/ https://cdnjs.cloudflare.com/ 'unsafe-inline' 'unsafe-eval'; connect-src 'self'${dev ? " * blob: ws:" : ""};
-      block-all-mixed-content; upgrade-insecure-requests; base-uri 'self'; object-src 'none'; child-src 'none'; frame-src 'none'; manifest-src 'self'; media-src 'self' https://res.cloudinary.com/${cloud_name}/;`)
+      meta(http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data:; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/okikio-assets/ https://www.josephojo.com; script-src 'self' https://polyfill.io/ https://cdnjs.cloudflare.com/ 'unsafe-inline' 'unsafe-eval'; connect-src 'self' * blob: ws:; block-all-mixed-content; upgrade-insecure-requests; base-uri 'self'; object-src 'none'; child-src 'none'; frame-src 'none'; manifest-src 'self'; media-src 'self' https://res.cloudinary.com/okikio-assets/;")
 
-    meta(name='robots' content='all')
-    meta(name='title' content=page.title)
-    //- meta(name='DC.title' content=page.title)
-    //- meta(name='HandheldFriendly' content='true')
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    meta(name='shortlink' content=`https://www.josephojo.com/`)
-    meta(name='canonical' content=`https://www.josephojo.com/`)
-    meta(name='keywords' content='Joseph Ojo, josephojo, josephojo.com, joseph, ojo, portfolio, engineer, web, mechatronics, website, netlify')
+    meta(name="robots" content="index,follow")
+    meta(name="copyright" content="Joseph Ojo")
+    meta(name="shortlink" content="https://www.josephojo.com/")
+    meta(name="canonical" content="https://www.josephojo.com/")
 
-    meta(property='og:type' content='website')
-    meta(property='og:image' content=`https://www.josephojo.com/android-icon-192x192.png`)
-    meta(property='article:author' content='Joseph Ojo')
-    meta(property='og:site_name' content='josephojo.com')
-    meta(property='og:title' content=`${page.title} - josephojo.com`)
-    meta(property='og:url' content=`https://www.josephojo.com/${page.name}`)
+    meta(name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0, user-scalable=yes")
+    meta(name="keywords" content="Joseph Ojo, josephojo, josephojo.com, joseph, ojo, portfolio, engineer, web, mechatronics, mech, robots, UOIT, OntarioTech, tech, website, netlify")
 
-    meta(itemprop='name' content=`${page.title} - josephojo.com`)
-    meta(itemprop='image' content='https://www.josephojo.com/android-icon-192x192.png')
-    meta(name='description' content='The porfolio of Joseph, it contains all amazing projects etc...')
-    meta(itemprop='description' content='The porfolio of Joseph, it contains all amazing projects etc...')
-    meta(property='og:description' content='The porfolio of Joseph, it contains all amazing projects etc...')
-    title= page.title
+    meta(property="og:type" content="website")
+    meta(name="twitter:site", content="@jo-ojo")
+    meta(property="article:author" content="Joseph Ojo")
+    meta(property="og:site_name" content="josephojo.com")
+    meta(itemprop="image" content="https://www.josephojo.com/android-icon-192x192.png")
+    meta(property="og:image" content="https://www.josephojo.com/android-icon-192x192.png")
+    meta(name="twitter:image" content="https://www.josephojo.com/android-icon-192x192.png")
 
-    link(rel='preconnect' href=`https://res.cloudinary.com/${cloud_name}/` crossorigin)
-    link(rel='preconnect' href='https://www.josephojo.com/' crossorigin)
+    block seo
+      +seo(page)
 
-    link(rel='apple-touch-icon', sizes='57x57', href='/apple-icon-57x57.png')
-    link(rel='apple-touch-icon', sizes='60x60', href='/apple-icon-60x60.png')
-    link(rel='apple-touch-icon', sizes='72x72', href='/apple-icon-72x72.png')
-    link(rel='apple-touch-icon', sizes='76x76', href='/apple-icon-76x76.png')
-    link(rel='apple-touch-icon', sizes='114x114', href='/apple-icon-114x114.png')
-    link(rel='apple-touch-icon', sizes='120x120', href='/apple-icon-120x120.png')
-    link(rel='apple-touch-icon', sizes='144x144', href='/apple-icon-144x144.png')
-    link(rel='apple-touch-icon', sizes='152x152', href='/apple-icon-152x152.png')
-    link(rel='apple-touch-icon', sizes='180x180', href='/apple-icon-180x180.png')
+    link(rel="preconnect" href=`https://res.cloudinary.com/${cloud_name}/` crossorigin)
+    link(rel="preconnect" href="https://www.josephojo.com/" crossorigin)
 
-    link(rel='icon', type='image/png', sizes='512x512', href='/android-icon-512x512.png')
-    link(rel='icon', type='image/png', sizes='192x192', href='/android-icon-192x192.png')
-    link(rel='icon', type='image/png', sizes='144x144', href='/android-icon-144x144.png')
-    link(rel='icon', type='image/png', sizes='32x32', href='/favicon-32x32.png')
-    link(rel='icon', type='image/png', sizes='96x96', href='/favicon-96x96.png')
-    link(rel='icon', type='image/png', sizes='16x16', href='/favicon-16x16.png')
-    link(rel='shortcut icon', href='/favicon.ico', type='image/x-icon')
-    link(rel='manifest', href='manifest.webmanifest')
-    link(rel='home', href='https://www.josephojo.com/')
+    link(rel="apple-touch-icon", sizes="57x57", href="/apple-icon-57x57.png")
+    link(rel="apple-touch-icon", sizes="60x60", href="/apple-icon-60x60.png")
+    link(rel="apple-touch-icon", sizes="72x72", href="/apple-icon-72x72.png")
+    link(rel="apple-touch-icon", sizes="76x76", href="/apple-icon-76x76.png")
+    link(rel="apple-touch-icon", sizes="114x114", href="/apple-icon-114x114.png")
+    link(rel="apple-touch-icon", sizes="120x120", href="/apple-icon-120x120.png")
+    link(rel="apple-touch-icon", sizes="144x144", href="/apple-icon-144x144.png")
+    link(rel="apple-touch-icon", sizes="152x152", href="/apple-icon-152x152.png")
+    link(rel="apple-touch-icon", sizes="180x180", href="/apple-icon-180x180.png")
+    link(rel="mask-icon", href="/favicon.svg", color="#000000")
 
-    meta(name='theme-color', content='#ffffff')
-    meta(name='msapplication-TileColor', content='#ffffff')
-    meta(name='msapplication-TileImage', content='/ms-icon-144x144.png')
+    link(rel="icon", type="image/png", sizes="512x512", href="/android-icon-512x512.png")
+    link(rel="icon", type="image/png", sizes="192x192", href="/android-icon-192x192.png")
+    link(rel="icon", type="image/png", sizes="144x144", href="/android-icon-144x144.png")
+    link(rel="icon", type="image/png", sizes="32x32", href="/favicon-32x32.png")
+    link(rel="icon", type="image/png", sizes="96x96", href="/favicon-96x96.png")
+    link(rel="icon", type="image/png", sizes="16x16", href="/favicon-16x16.png")
+    link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
+    link(rel="manifest", href="manifest.webmanifest")
+    link(rel="home", href="https://www.josephojo.com/")
+
+    meta(name="theme-color", content="#ffffff")
+    meta(name="twitter:card", content="summary")
+    meta(name="msapplication-TileColor", content="#ffffff")
+    meta(name="apple-mobile-web-app-capable", content="yes")
+    meta(name="apple-mobile-web-app-status-bar-style", content="white")
+    meta(name="msapplication-TileImage", content="/ms-icon-144x144.png")
 
     link(rel="preload" href="/fonts/frank-ruhl-libre--black_latin.woff2" as="font" type="font/woff2" crossorigin)
     link(rel="preload" href="/fonts/montserrat--bold_latin.woff2" as="font" type="font/woff2" crossorigin)
     link(rel="preload" href="/fonts/montserrat--extrabold_latin.woff2" as="font" type="font/woff2" crossorigin)
     link(rel="preload" href="/fonts/roboto--regular_latin.woff2" as="font" type="font/woff2" crossorigin)
-    link(rel='stylesheet' href='./css/app.min.css' inline async)
-
-    <!--[if lt IE 10]>
-      link(rel='preconnect' href='https://cdnjs.cloudflare.com/' crossorigin)
-    <![endif]-->
+    link(rel="stylesheet" href="./css/app.min.css" inline async)
 
     <!--[if lt IE 9]>
-      script(src='https://cdnjs.cloudflare.com/ajax/libs/nwmatcher/1.4.2/nwmatcher.min.js' async)
-      script(src='https://cdnjs.cloudflare.com/ajax/libs/json2/20160511/json2.min.js' async)
-      script(src='https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js' async)
-      script(src='https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js' async)
-      script(src='https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js' async)
-      script(src='https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.13/es5-shim.min.js' async)
+      link(rel="preconnect" href="https://cdnjs.cloudflare.com/" crossorigin)
     <![endif]-->
 
-    <!--[if lt IE 10]>
-      script(src='https://cdnjs.cloudflare.com/ajax/libs/flexibility/2.0.1/flexibility.js' async)
-      script.
-        flexibility(document.documentElement);
-    <![endif]-->
+    script(src="./js/ver-check.min.js" inline async)
+  body(data-barba="wrapper")
+    +link({
+      class: "skip-main",
+      href: "#main",
+      content: "Skip to main content"
+    })
+    block navbar
+      +navbar(page)
 
-    script.
-      var check = function () {
-          "use strict";
-          if (typeof window.Symbol == "undefined" ||
-              typeof window.IntersectionObserver == "undefined") return false;
-          try {
-              Function("class Foo {}") ();
-              Function("let bar = x => x+1;") ();
-              Function("let bez = { a: 'b' }; let box = { b: 'a', ...bez };") ();
-          } catch (e) { return false; }
-          return true;
-      };
+    main#main.main(data-barba="container" data-barba-namespace="home")
+      block content
 
-      var _require = function (src, fn) {
-        var head = document.getElementsByTagName('head')[0];
-        var script = document.createElement('script');
-        script.setAttribute("async", "");
-        script.setAttribute("crossorigin", "");
-        script.type = 'text/javascript';
-        script.onload = fn;
-        script.onreadystatechange = function () {
-            if (this.readyState === 'complete') { fn(); }
-        };
-        script.src = src;
-        head.appendChild(script);
-      };
-
-      if (/msie|trident|edge/g.test(window.navigator.userAgent.toLowerCase()) || !check()) {
-        _require("https://polyfill.io/v3/polyfill.min.js?flags=gated&features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2Cperformance.now");
-        _require("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.3/picturefill.min.js");
-        _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.min.js");
-        _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.ielte7.min.js");
-       }
-
-    include ./components/header.pug
-    include ./components/layer.pug
-    include ./components/layout.pug
-    include ./components/section.pug
-    include ./components/hero.pug
-    include ./components/footer.pug
-  body.animate-in
-    div(style="display: none" hidden)
-      meta(itemprop='url' content=`https://www.josephojo.com/${page.name}`)
-      span(itemprop='name' content=`${page.title} - josephojo.com`)
-        | by
-        span(itemprop='author') Joseph Ojo
-          div(itemscope='' itemtype='https://schema.org/Person')
-            img(itemprop='image' src='https://www.josephojo.com/android-icon-192x192.png' alt='The logo for josephojo.com')
-            span(itemprop="email") laoluojo
-              span &#64;
-              span gmail.com
-            span(itemprop='description')
-              | The porfolio of Joseph, it contains all amazing projects etc...
-            span(itemtype='https://schema.org/EducationalOrganization' itemprop="alumniOf")
-              | OnTech - Ontario Tech University
-            a(href='https://www.linkedin.com/in/o-josephojo/' itemprop='url' title="Link to Joseph's linkedin account") linkedin
-    if true
-      a.skip-main(href="#main" tabindex="0" title="Skip to main content") Skip to main content
-      //- dev
-      //- Navbar etc...
-      +header(page)
-
-      mixin sectionView(section)
-        if typeof section == "object"
-          +section(section)
-
-      mixin layoutView(layout)
-        if typeof layout == "object"
-          - let sectionList = layout.values;
-          - let section = layout.section;
-          +layout(layout)
-            +sectionView(section)
-
-            if Array.isArray(sectionList)
-              each sections in sectionList
-                - let section = sections.section;
-                  +sectionView(section)
-
-      main#main.main(data-container)
-        - let layerLists = page.values;
-
-        //- Page Layers
-        if Array.isArray(layerLists)
-          each layers in layerLists
-            - let layer = layers.layer;  //- Display Custom Layer if it exists
-            - let hero = layers.hero; //- Display Hero Layer if it exists
-
-            if typeof hero == "object"
-              +hero(hero, page.banner)
-
-            if typeof layer == "object"
-              - let layout = layer.layout;
-              - let layoutList = layer.values;
-              +layer(layer)
-                +layoutView(layout)
-
-                if Array.isArray(layoutList)
-                  each layouts in layoutList
-                    - let layout = layouts.layout;
-                    +layoutView(layout)
-
-      .layer-action-center.layer-action-center-show
-        article.layer-action-group
-          section.layer-primary-dark.layer-shadow.layer-round.layout-align-self-end.layout-margin-horz
-            button.back-to-top.btn.btn-hover.layer-round.layout-padding-horz-smallest.layout-padding-vert-smallest.layer-primary-dark.layer-primary-hover.layer-primary-focus.style-tertiary.style-hover-tertiary.style-focus-tertiary(type="button")
-              span.btn-group
-                i.icon.style-font-sz-24(inline) expand_less
-                span.btn-section
-                  span.btn-spacer
-                  span.btn-content Back To Top
-                  span.btn-spacer
-
-      if !page.noFooter
-        +footer("Made with ❤ by Okiki Ojo | ")
-          span.btn.pointer-default
-            section.btn-group
-              i.icon(inline) copyright
+    .layer-action-center.layer-action-center-show
+      article.layer-action-group
+        .layer-shadow.layer-round.layout-align-self-end.layout-margin-horz
+          button.back-to-top.btn.btn-hover.layer-round.layout-padding-smallest.layer-primary.layer-primary-dark-hover.layer-primary-light-focus.style-tertiary.style-hover-tertiary.style-focus-tertiary(type="button")
+            span.btn-group
+              i.icon.style-font-sz-24(inline) expand_less
               span.btn-section
                 span.btn-spacer
-                span 2019 Joseph Ojo -
+                span.btn-content Back To Top
                 span.btn-spacer
-          +link({
-            href: "/sitemap.html",
-            class: "layout-inline-block"
-          })
-            i Sitemap
-    else
-      section.layer.layer-dark
-        article.layout-contain
-          section.layout.layout-shorten.layer-overflow-hide.layout-max-height.layout-flex.layout-align-items-center.layout-justify-content-start
-            section
-              h3.style-secondary-dark.style-font-title.style-uppercase.layout-margin-dull-vert.layout-padding-vert-mini Joseph
-              h1.style-white.style-bold.layer-title.style-uppercase.layout-margin-dull-vert-top Coming SOON
-              h5.style-white.style-line-height.style-capital.layer-content-detail This website is currently in development. We are working day and night to have it in tip top shape.
 
-    script(src=`${dev ? './js/app.modern.min.js' : './js/app.vendor.min.js'}` inline async)
-    //- if !debug
-      script(src=`./js/store.min.js` inline async)
+    +footer("Made with ❤ by Okiki Ojo | ")
+      span.btn.pointer-default
+        .btn-group
+          i.icon(inline) copyright
+          span.btn-section
+            span.btn-spacer
+            span 2019 Joseph Ojo -
+            span.btn-spacer
+      +link({
+        href: "/sitemap",
+        class: "layout-inline-block"
+      })
+        i Sitemap
+
+    script(src=`${dev ? "./js/modern.min.js" : "./js/vendor.min.js"}` inline async)
